kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: todos-ingress
  annotations:
    alb.ingress.kubernetes.io/load-balancer-name: todos-alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS": 443}]'
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-east-2:886185890074:certificate/5b004916-6600-46bd-8f8f-40fd99705600
    alb.ingress.kubernetes.io/ssl-redirect: "443"
    kubernetes.io/ingress.class: alb
    external-dns.alpha.kubernetes.io/hostname: todos.lektprojekt.com
    
spec:
  rules:
    - host: todos.lektprojekt.com
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: todos-backend-service
                port:
                  name: backend-http
          - path: /
            pathType: Prefix
            backend:
              service:
                name: todos-frontend-service
                port:
                  name: frontend-http
